--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   "dependencies": {
     "@tanstack/react-query": "^4.10.1",
     "axios": "^1.3.3",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "formik": "^2.2.9",
+    "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
