--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.10.1",
     "axios": "^1.3.3",
     "clean-webpack-plugin": "^4.0.0",
@@ -41,7 +42,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "redux": "^4.2.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.76.2",
     "yup": "^1.0.0"
