--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "start": "webpack-dev-server --hot --open --mode development",
     "build": "webpack --config webpack.config.js --mode production",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint \"src/**/*.{js,jsx}\" --quiet"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -38,6 +38,8 @@
     "css-loader": "^6.7.3",
     "formik": "^2.2.9",
     "html-webpack-plugin": "^5.5.0",
+    "install": "^0.13.0",
+    "npm": "^9.6.7",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -45,8 +47,10 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.76.2",
+    "webpack-manifest-plugin": "^5.0.0",
     "yup": "^1.0.0"
   },
   "proxy": "http://localhost:3001"
