deleted the server stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 node_modules
-.prettierrc
-config.json
-system/expressionengine/config/database.php
-system/expressionengine/config/config.php
-server/cofig
+dist/
 .env
-config
+.DS_Store
+coverage/
+.vscode/
